@@ -1,3 +1,8 @@
+[B]1.9.15:[/B]
+- fix all archive tv and radio
+- add tv archive A-Z title, info
+[B]1.9.14:[/B]
+- fix tv episode
 [B]1.9.13:[/B]
 - added live STVR
 [B]1.9.12:[/B]
